# a1_notation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
a1_notation/: __init__.py  column_lookup.py  exceptions.py
tests/: test_column_lookup.py
